unpackaged/main/default/objects/FPC_Lost_Margin__c/FPC_Lost_Margin__c.object-meta.xml
<CustomObject>
    <label>Lender Lost Margin</label>
    <nameField>
        <displayFormat>LLM-{00000}</displayFormat>
        <label>Lost Margin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lender Lost Margin</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>