unpackaged/main/default/objects/FPC_Lost_Margin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender Lost Margin</relationshipLabel>
    <relationshipName>Lender_Lost_Margin</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>