unpackaged/main/default/objects/FPC_Lost_Margin__c/fields/High_Dollar_Lost_Margin__c.field-meta.xml
<CustomField>
    <fullName>High_Dollar_Lost_Margin__c</fullName>
    <description>This field will contain the high dollar criteria if a lender uses equipment cost as a criteria to calculate Lost Margin in a leasing transaction.</description>
    <inlineHelpText>This field will contain the high dollar criteria if a lender uses equipment cost as a criteria to calculate Lost Margin in a leasing transaction.</inlineHelpText>
    <label>High Dollar Lost Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>