unpackaged/main/default/objects/FPC_Lost_Margin__c/fields/Lost_Margin_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Lost_Margin_Criteria__c</fullName>
    <description>This field will indicate which criteria a lender uses to calculate Lost Margin in a leasing transaction.</description>
    <inlineHelpText>This field will indicate which criteria a lender uses to calculate Lost Margin in a leasing transaction.</inlineHelpText>
    <label>Lost Margin Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Equipment Cost</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>