unpackaged/main/default/objects/FPC_Lost_Margin__c/fields/Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Points__c</fullName>
    <description>This field will contain the max points criteria that the lender uses to calculate lost margin.</description>
    <inlineHelpText>This field will contain the max points criteria that the lender uses to calculate lost margin.</inlineHelpText>
    <label>Max Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>