unpackaged/main/default/objects/FPC_Lost_Margin__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>This field will contain the rate criteria if a lender uses rate as a criteria to calculate Lost Margin in a leasing transaction.</description>
    <inlineHelpText>This field will contain the rate criteria if a lender uses rate as a criteria to calculate Lost Margin in a leasing transaction.</inlineHelpText>
    <label>Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>